--- a/package.json
+++ b/package.json
@@ -2,26 +2,37 @@
   "name": "change-log-api",
   "version": "1.0.0",
   "description": "",
-  "main": "main.ts",
+  "main": "src/main.js",
   "scripts": {
-    "dev": "nodemon main.ts"
+    "dev": "nodemon src/main.ts",
+    "test": "jest",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/main.js"
   },
   "keywords": [],
   "author": "Shayan Ameen",
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "@types/jest": "^29.5.5",
+    "@types/supertest": "^2.0.13",
     "argon2": "^0.31.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "lodash.merge": "^4.6.2",
+    "morgan": "^1.10.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/lodash.merge": "^4.6.7",
     "@types/morgan": "^1.9.6",
     "nodemon": "^3.0.1",
     "prisma": "^5.3.1",
